--- a/QLTC/bower.json
+++ b/QLTC/bower.json
@@ -1,7 +1,8 @@
 {
-	"name":"Du an thuc tap 1- Du an quan ly thu chi",
-	"dependencies":{
-		"jquery":"~2.1.3",
-		"angular":"~1.3.17"
-	}
+  "name": "Du an thuc tap 1- Du an quan ly thu chi",
+  "dependencies": {
+    "angular": "~1.3.17",
+    "jquery": "~2.1.3",
+    "lodash": "~3.10.1"
+  }
 }
