--- a/QLTC/bower.json
+++ b/QLTC/bower.json
@@ -2,6 +2,7 @@
   "name": "Du an thuc tap 1- Du an quan ly thu chi",
   "dependencies": {
     "angular": "~1.3.17",
+    "bootstrap": "~3.3.5",
     "jquery": "~2.1.3",
     "lodash": "~3.10.1"
   }
